index link düzenleme

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </p>
             
             <!-- DÜZELTİLDİ: Buton linki web app adresine yönlendirildi -->
-            <a href="https://myapp-bxyf.onrender.com" target="_blank" class="bg-chiron-blue text-white font-bold py-3 px-8 rounded-full text-lg hover:bg-chiron-blue-dark transition-all shadow-lg inline-block">
+            <a href="https://beta.chiron.com.tr" target="_blank" class="bg-chiron-blue text-white font-bold py-3 px-8 rounded-full text-lg hover:bg-chiron-blue-dark transition-all shadow-lg inline-block">
                 Hemen Sohbete Başla
             </a>
             <p class="mt-4 text-sm text-gray-500">Ücretsiz • Gizli • Her zaman yanında</p>
@@ -135,7 +135,7 @@
             <h2 class="text-3xl font-bold mb-4">Kendine Verebileceğin En Güzel Hediye</h2>
             <p class="text-lg max-w-2xl mx-auto mb-8">Bugün, kendine daha şefkatli yaklaşmak ve iç dünyanı keşfetmek için ilk adımı at. Chiron bu yolda sana eşlik etmek için burada.</p>
             <!-- DÜZELTİLDİ: Buton linki web app adresine yönlendirildi -->
-            <a href="https://myapp-bxyf.onrender.com" target="_blank" class="bg-chiron-blue text-white font-bold py-3 px-8 rounded-full text-lg hover:bg-chiron-blue-dark transition-all shadow-lg">
+            <a href="https://beta.chiron.com.tr" target="_blank" class="bg-chiron-blue text-white font-bold py-3 px-8 rounded-full text-lg hover:bg-chiron-blue-dark transition-all shadow-lg">
                 Ücretsiz Başla
             </a>
         </div>
